--- a/Projet tutoré - Monades en Suspension/.classpath
+++ b/Projet tutoré - Monades en Suspension/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="src" path="src2"/>
 	<classpathentry kind="src" path="src3"/>
+	<classpathentry kind="lib" path="src3/lib/controlsfx-8.20.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
